apps/samples/webgoat/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-webgoat
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: sample-webgoat
    app.kubernetes.io/part-of: fortifylab-samples
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-webgoat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-webgoat
        app.kubernetes.io/part-of: fortifylab-samples
    spec:
      containers:
      - name: webgoat
        image: ${FORTIFY_SAMPLE_WEBGOAT_IMAGE}
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /WebGoat
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: sample-webgoat
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: sample-webgoat
    app.kubernetes.io/part-of: fortifylab-samples
spec:
  selector:
    app.kubernetes.io/name: sample-webgoat
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-webgoat
  namespace: ${NAMESPACE}
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - ${WEBGOAT}
    secretName: tls
  rules:
  - host: ${WEBGOAT}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-webgoat
            port:
              number: 80
